[feature/feature_ui_update_zth] Fix button align and graph

--- a/public/css/employee/employeelist.css
+++ b/public/css/employee/employeelist.css
@@ -1,6 +1,5 @@
 .mr-icon {
-  margin: 15px;
-  padding: 6px;
+  padding: 8px 7px 10px 7px;
   background-color: #3e64ff;
   color: #fff;
   border-radius: 5px;
@@ -27,9 +26,9 @@
   border: none;
   background-color: #3e64ff;
   color: #fff;
+  font-size: 15px;
   cursor: pointer;
   border-radius: 10px;
-  font-size: 15px;
 }
 
 .import-btn {
